# codex-dm-kit

./: .gitignore  AGENTS.md  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: tests.yml
codex_dm_kit/: __init__.py  __main__.py  generator.py
codex_dm_kit/templates/campaign/: AGENTS.md.tmpl  campaign_summary.md.tmpl  image_prompts.md.tmpl  main_prompt.md.tmpl  new_chat_prompt.md.tmpl  rules_notes.md.tmpl  session_log.md.tmpl
codex_dm_kit/templates/campaign/dashboard/: index.html
codex_dm_kit/templates/campaign/tools/: codex_dm.py
examples/: onboarding_answers.ru.json
examples/demo/: AGENTS.md  battle_state.json  campaign_meta.json  campaign_summary.md  image_prompts.md  locations.json  main_prompt.md  new_chat_prompt.md  npcs.json  player_state.json  quests.json  secrets.md  session_log.md  world_state.json
examples/demo/dashboard/: dashboard_data.js
examples/demo/tools/: codex_dm.py
tests/: test_generator.py  test_runtime.py
